# CHARMTwinsights

./: .gitignore  CHARMTwinsight_API_Design.md  DOCKER_TIPS.md  Makefile  README.md  fhir_upload_script.py  pyproject.toml
app/: build_all.sh  docker-compose.override.yaml  docker-compose.yml
app/Broadsea/: CHARMTWINSIGHT_README.md
app/Broadsea/phoebe/: concept_recommended.sql
app/hapi/: hapi.application.yaml
app/hapi/postgres_data/: postmaster.pid
app/mlflow_server/: Dockerfile  pyproject.toml
app/mlflow_server/mlflow_server/: __init__.py  main.py
app/mlflow_server/tests/: build_model.py  delete_model.sh  query_metadata.sh  test_build_models.sh  test_dbs.sh  upload_model.sh
app/model_server/: Dockerfile  pyproject.toml
app/model_server/data/mongo_data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-1458331778123290150.wt  collection-2-1458331778123290150.wt  index-1-1458331778123290150.wt  index-3-1458331778123290150.wt  sizeStorer.wt
app/model_server/data/mongo_data/diagnostic.data/: metrics.2025-06-20T20-23-25Z-00000
app/model_server/model_server/: main.py
app/model_server/models/: build_model_images.sh  register_model_images.sh  test_predict_models.sh
app/model_server/models/coxcopdmodel/: Dockerfile  README.md  build_docker.sh  examples.json  model_metadata.json  predict  predict.py  register_model_image.sh
app/model_server/models/coxcopdmodel/pickled_models/: preprocessor_20250724_170001.pkl
app/model_server/models/coxcopdmodel/twinsight_model/: dataloader_cox.py  preprocessing_cox.py
app/model_server/models/coxmodel/: Dockerfile  README.md  build_docker.sh  input.json  predict.py  pyproject.toml  register_model_image.sh
app/model_server/models/coxmodel/pickled_models/: preprocessor_20250721_012230.pkl  preprocessor_20250805_155132.pkl
app/model_server/models/coxmodel/twinsight_model/: model_cox.py  preprocessing_cox.py
app/model_server/models/dpcgansmodel/: Dockerfile  build_docker.sh  dpcgan_model.pkl  model_metadata.json  predict.py  pyproject.toml  register_model_image.sh
app/model_server/models/irismodel/: README.md  build_docker.sh  build_model.py  model_metadata.json  predict.py  register_model_image.sh
app/model_server/models/irismodel/iris_model/: model.pkl
app/model_server/tests/: test_build_dpcgans_docker.sh  test_build_model_docker.sh  test_list_models.sh  test_load_model.sh  test_predict.sh
app/model_server/tests/dpcgansmodel/: Dockerfile  README.md  examples.json
app/model_server/tests/irismodel/: Dockerfile  README.md  examples.json
app/model_server/tests/irismodel/iris_model/: MLmodel  conda.yaml
app/output/fhir/: Abbey813_Johnette525_Cronin387_b8dd1a54-104a-6b74-1312-23b2a8afaa55.json  Abe604_Bailey598_55a7cddf-e756-4057-7777-b9b2729d9354.json  Adaline602_Lyndsey828_Johnson679_dcfa6df3-ba67-3fad-06e9-b8f15cb8fffd.json  Adolfo777_Glover433_feeab72e-6aa0-b75f-f81a-ef315b1f4a44.json  Adrian111_Schoen8_2a58abd7-a56e-d340-4a33-0a88d683a80a.json  Adriane398_Charmain607_Abbott774_8d8e88ce-bdbe-8420-7318-1795550633e4.json  Adrianne466_Ila598_Mann644_cd464184-0409-6112-24d8-d5f994bed849.json  Agatha2_Herman763_6dc48024-09fc-2364-21d3-944937402c2c.json  Aimee901_Delinda651_Quigley282_28057d3b-df0d-cdef-9d72-ba4cdbe8f959.json  Albert312_Lowe577_46415629-5939-0394-20c7-b8e48c825a83.json  Alejandro916_Cardenas331_a14b29a7-2980-9439-ce33-f94e715a66f6.json  Alexander630_Maire384_Stroman228_72632659-29a8-9c5f-4a86-e57ae538d047.json  Alexis664_Eichmann909_0c8a2a71-427b-4b31-dfea-794e713b96be.json  Alfonzo975_Romaguera67_2c868efc-fbaf-be50-8c6b-3b392c57a63a.json  (+674 more)
app/pyserver/: Dockerfile  pyproject.toml
app/pyserver/pyserver/: main.py
app/router/: Dockerfile  pyproject.toml
app/router/router/: config.py  main.py
app/router/router/routers/: modeling.py  stat_server_py.py  synthea.py
app/rserver/: Dockerfile
app/stat_server_py/: Dockerfile  pyproject.toml  test_stats.sh
app/stat_server_r/: DESCRIPTION  Dockerfile  app.R  run_app.R
app/synthea_server/: Dockerfile  gen_patients.sh  pyproject.toml
app/synthea_server/synthea-pyserver/: main.py
app/vueapp/: Dockerfile  package-lock.json  package.json
data/: Ahmed109_Spencer878_5694fb41-61f4-c8b1-abd7-677b3a05f205.json
model-templates/: README.md  validate-dockerfile.py
model-templates/examples/simple-classifier/: Dockerfile  README.md  create_model.py  examples.json  predict.py  pyproject.toml  simple_model.pkl  train_model.py
model-templates/python-model/: Dockerfile  README.md  examples.json  predict  predict.py  pyproject.toml
model-templates/r-model/: DESCRIPTION  Dockerfile  README.md  predict  predict.R
scripts/: README.md  atlasdb_logs.sh  atlasdb_start.sh  atlasdb_stop.sh  docker_clean.sh  docker_status.sh  fhir_upload_script.py  hapi_clean.sh  hapi_start.sh  hapi_stop.sh  mimic_fetch_decrypt.sh  mimic_fetch_fhir.sh  mimic_push_hapi_data.py  mimic_sample_push_hapi.py  pyserver_start.sh  rserver_start.sh  rserver_stop.sh  synthea_gen_data.sh  synthea_push_hapi_data.sh
scripts/hapi/: logs.sh
scripts/model_server/: build_model_images.sh  list_models.sh  load_models.sh  logs.sh  predict_models.sh  start.sh  stop.sh
scripts/pyserver/: logs.sh  stop.sh
scripts/rserver/: logs.sh
scripts/synthea_local/: README.md
scripts/synthea_server/: gen_patients.sh  logs.sh  start.sh  stop.sh
synthea_output/fhir/: Hong136_Stroman228_0a67393f-4e2e-0c5b-9a9c-4b8ebeba7655.json
synthea_output/metadata/: 2025_02_18T12_38_57Z_20_Massachusetts_86f6394a_5d95_4519_9579_75ea89a9ad4f.json
tools/: docker-compose.yml
tools/mlflow-models/: allofus_logreg_spec.yaml  build_model.py  load_model.py  log_model.py  pyproject.toml  serve_models.py  use_models.sh
tools/model_server_models/: build_dpcgans_image.sh  build_iris_image.sh
tools/model_server_models/irismodel/: Dockerfile  pyproject.toml
tools/synthea/: Dockerfile
(+327 files in other folders)
