[project]
name = "mlflow_server"
version = "0.1.0"
description = "Internal Python analytics for CHARMTwinsight"

authors = [
    {name = "Your Name",email = "you@example.com"}
]

license = {text = "MIT"}
requires-python = ">=3.13,<4.0"

dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "fhiry (>=4.0.0,<5.0.0)",
    "mlflow (>=2.22.1,<3.0.0)",
]

packages = [
    { include = "mlflow_server" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
