[project]
name = "router"
version = "0.1.0"
description = "External-facing router for CHARMTwinsight"

authors = [
    {name = "Your Name",email = "you@example.com"}
]

license = {text = "MIT"}
requires-python = ">=3.13,<4.0"

dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
]

packages = [
    { include = "router" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
