[tool.poetry]
name = "my-model"
version = "0.1.0"
description = "My CHARMTwinsights model"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
# Add your model dependencies here
numpy = "^1.24.0"
pandas = "^2.0.0"
scikit-learn = "^1.3.0"
# joblib = "^1.3.0"  # For joblib models
# torch = "^2.0.0"   # For PyTorch models
# tensorflow = "^2.13.0"  # For TensorFlow models

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
