# pyproject.toml
[tool.poetry]
name = "coxmodel" 
version = "0.1.0"   
description = "Cox Proportional Hazards Model for COPD Prediction"
authors = ["Lakshmi"]


[tool.poetry.dependencies]
python = ">=3.10,<3.11" # Matches your Python 3.10
# pandas = "2.3.1"       
# numpy = "1.26.4"
lifelines = "0.30.0"
scikit-learn = "1.6.0" 
# pyarrow = "20.0.0"      
# google-cloud-bigquery = "2.34.4" 
PyYAML = "6.0.1"        
[build-system]
requires = ["poetry-core>=1.0.0"] # Ensure this requirement is met
build-backend = "poetry.core.masonry.api"
